# JsonpySql

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  jsonpysql-architecture-SKILL.md  pyproject.toml
.github/workflows/: ci.yml
jsonpysql/: __init__.py  database.py  exceptions.py
jsonpysql/query/: aggregates.py  builder.py  executor.py  models.py  planner.py
jsonpysql/schema/: collection.py  constraints.py  fields.py  functions.py  registry.py  validator.py
jsonpysql/storage/: document_store.py  engine.py  index_manager.py  lock_manager.py  models.py  wal.py
jsonpysql/utils/: platform.py  serialization.py
tests/integration/: test_database.py  test_datetime_persistence.py  test_schema_collection_crud.py  test_storage_engine.py
tests/unit/query/: test_aggregates.py  test_builder.py  test_executor.py  test_planner.py
tests/unit/schema/: test_collection_manager.py  test_fields_pk.py  test_function_registry.py  test_referential_integrity.py  test_schema_validation.py
tests/unit/storage/: test_coverage_supplement.py  test_document_store.py  test_index_manager.py  test_lock_manager.py  test_wal.py
tests/unit/utils/: test_serialization.py
